<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="TcoLogItem" Id="{f91bde37-279b-08e2-224e-f1367eaa92de}">
    <Declaration><![CDATA[(*~
	<docu>
		<summary>
			Logger message object contains complete message details including time stamp, message text, message category, identity of the message provider, context cycle in which the message was posted.			
		</summary>				
	</docu>	
~*)
TYPE TcoLogItem :
STRUCT
(*~
	<docu>
		<summary>
			Time when the message was posted.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}
	TimeStamp : DT;
(*~
	<docu>
		<summary>
			Text of the message.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}		
	Text : STRING(TcoMessengerEnv.MAX_MESSAGE_TEXT_LENGHT);
(*~
	<docu>
		<summary>
			Identity of the TcoObject that posted this message. 
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}	
	Identity : ULINT;	
(*~
	<docu>
		<summary>
			Message category of this message. See <see cref="eMessageCategory"/> for detailed informations. 
		</summary>				
	</docu>	
~*)
	Category : eMessageCategory;
(*~
	<docu>
		<summary>
			Context cycle in which the message was posted.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}
	Cycle : ULINT;
	
(*~
	<docu>
		<summary>
			Count of messages of the object in the current cycle.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}
	PerCycleCount : BYTE;

(*~
	<docu>
		<summary>			
			Indicates that the message is expected to be dequeed from the buffer.
		</summary>				
	</docu>	
~*)	
	ExpectDequeing : BOOL;
	
	(*~
	<docu>
		<summary>		
			Stores message digest of this message text.
		</summary>				
	</docu>	
	~*)
	MessageDigest : DWORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>